# DiligentLog

./: CMakeLists.txt  Common.cpp  Log.cpp  Log.h
Primitives/: CMakeLists.txt
Primitives/interface/: DebugOutput.h
